--- a/tabla.html
+++ b/tabla.html
@@ -6,7 +6,7 @@
 
 <body>
     <table>
-        <tr>
+        <tr class="titulos">
             <th>ID</th>
             <th>Titutlo</th>
             <th>Publisher</th>
@@ -28,7 +28,7 @@
             <th>vintange</th>
             <th>dificl conseguir mas</th>
         </tr>
-        <tr>
+        <tr class="segundo">
             <th>002</th>
             <th>fifa22</th>
             <th>ea sports</th>
@@ -50,7 +50,7 @@
             <th>current</th>
             <th>disponilbe</th>
         </tr>
-        <tr>
+        <tr class="segundo">
             <th>003</th>
             <th>metal geard solid 5</th>
             <th>konami</th>
